--- a/pizzashopapp/templates/pizzashop/sign_up.html
+++ b/pizzashopapp/templates/pizzashop/sign_up.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     <h2>Регистрация</h2>
-   
+   <form method="post">
+       {% csrf_token %}
+       {{user_form.as_p}}
+       {{pizzashop_form.as_p}}
+       <button type="submit">Зарегистрировать</button>
+   </form>
 </body>
 </html>
