--- a/pizzashopapp/templates/pizzashop/sign_up.html
+++ b/pizzashopapp/templates/pizzashop/sign_up.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h2>Регистрация</h2>
-   <form method="post">
+   <form method="post" enctype="multipart/form-data">
        {% csrf_token %}
        {{user_form.as_p}}
        {{pizzashop_form.as_p}}
