--- a/pizzashopapp/templates/pizzashop/sign_up.html
+++ b/pizzashopapp/templates/pizzashop/sign_up.html
@@ -1,22 +1,19 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Регистрация</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/mystyle.css' %}">
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</head>
-<body>
-    <h2>Регистрация</h2>
-   <form method="post" enctype="multipart/form-data">
-       {% csrf_token %}
-       {{user_form.as_p}}
-       {{pizzashop_form.as_p}}
-       <button type="submit">Зарегистрировать</button>
-   </form>
-</body>
-</html>
+{% extends 'base_signup.html' %}
+
+{% block title %}
+    Войти 
+{% endblock %}
+
+{% block heading %}
+  Пиццерия, страница входа!
+{% endblock %}
+
+{% block content %}
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{user_form.as_p}}
+    {{pizzashop_form.as_p}}
+    <button type="submit">Зарегистрировать</button>
+</form>
+{% endblock %}
+
