--- a/pizzashopapp/templates/pizzashop/sign_in.html
+++ b/pizzashopapp/templates/pizzashop/sign_in.html
@@ -12,7 +12,7 @@
 <form method="POST">
         {% csrf_token %}
         {{form}}
-        <button type="submit">Отправить</button>
+        <button type="submit" class="btn btn-red pull-right">Отправить</button>
     </form>
 {% endblock %}
 
