--- a/pizzashopapp/templates/pizzashop/sign_up.html
+++ b/pizzashopapp/templates/pizzashop/sign_up.html
@@ -13,7 +13,7 @@
     {% csrf_token %}
     {{user_form.as_p}}
     {{pizzashop_form.as_p}}
-    <button type="submit">Зарегистрировать</button>
+    <button type="submit" class="btn btn-red pull-right">Зарегистрировать</button>
 </form>
 {% endblock %}
 
