--- a/pizzashopapp/templates/pizzashop/sign_in.html
+++ b/pizzashopapp/templates/pizzashop/sign_in.html
@@ -1,4 +1,5 @@
 {% extends 'base_signup.html' %}
+{% load bootstrap3 %}
 
 {% block title %}
     Войти 
@@ -11,8 +12,10 @@
 {% block content %}
 <form method="POST">
         {% csrf_token %}
-        {{form}}
+        {% bootstrap_form form %}
         <button type="submit" class="btn btn-red pull-right">Отправить</button>
     </form>
+
+<a href="{% url 'pizzashop-sign-up' %}">Зарегистрировать Пиццерию</a>
 {% endblock %}
 
