--- a/pizzashopapp/templates/pizzashop/sign_up.html
+++ b/pizzashopapp/templates/pizzashop/sign_up.html
@@ -1,4 +1,5 @@
 {% extends 'base_signup.html' %}
+{% load bootstrap3 %}
 
 {% block title %}
     Войти 
@@ -11,9 +12,13 @@
 {% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{user_form.as_p}}
-    {{pizzashop_form.as_p}}
+    <h3>Владелец</h3>
+    {% bootstrap_form user_form %}
+    <h3>Пиццерия</h3>
+    {% bootstrap_form pizzashop_form %}
+   
     <button type="submit" class="btn btn-red pull-right">Зарегистрировать</button>
 </form>
+<a href="{% url 'pizzashop-sign-in' %}">Страница входа</a>
 {% endblock %}
 
