стилизуем сайдбар (аккаунт, пицца)

--- a/pizzashopapp/static/css/mystyle.css
+++ b/pizzashopapp/static/css/mystyle.css
@@ -1,3 +1,8 @@
+body{
+    padding-top: 50px;
+    overflow: auto;
+    background-color: #edf2f5;
+}
 .bg-ruby{
     background-color: #7B2324;
 }
@@ -8,4 +13,27 @@
 .btn-red:hover,.btn-red:focus{
     color: white;
     background-color: #ec4d57;
+}
+/*SIDEBAR*/
+.sidebar{
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0;
+    background-color: #7B2324;
+    overflow: auto;
+}
+/*SIDEBAR - HEADER*/
+.sidebar > div:first-child{
+    padding: 30px 10px;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: #3f1e1e;
+}
+.sidebar > div:first-child > h4{
+    color: #e0deeb;
+}
+.sidebar > div:first-child > h5{
+    color: #ffffff;
 }
