--- a/pizzashopapp/templates/pizzashop/base.html
+++ b/pizzashopapp/templates/pizzashop/base.html
@@ -5,8 +5,13 @@
 {% endblock %}
 
 {% block sidebar %}
-   Привет, {{ request.user }}
-   <hr>
+   <div class="text-center">
+       <img class="rounded-circle" src="{{MEDIA_URL}}{{request.user.pizzashop.logo}}" width="70" height="70" alt="">
+       <br><br>
+       <h4>Приветствую, {{request.user.get_full_name}}</h4>
+       <h5>{{request.user.pizzashop.name}}</h5>
+   </div>
+
    <a href="{% url 'pizzashop-account' %}">Профиль</a>
    -
    <a href="{% url 'pizzashop-pizza' %}">Пиццы</a>
