--- a/pizzashopapp/templates/pizzashop/base.html
+++ b/pizzashopapp/templates/pizzashop/base.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block page %}
-    <h2>Пиццерия</h2>    
+{% block title %}
+    Пиццерия  
 {% endblock %}
 
 {% block sidebar %}
@@ -9,10 +9,21 @@
        <img class="rounded-circle" src="{{MEDIA_URL}}{{request.user.pizzashop.logo}}" width="70" height="70" alt="">
        <br><br>
        <h4>Приветствую, {{request.user.get_full_name}}</h4>
-       <h5>{{request.user.pizzashop.name}}</h5>
+       <h5>{{request.user.pizzashop.name}}</h5>      
    </div>
 
-   <a href="{% url 'pizzashop-account' %}">Профиль</a>
-   -
-   <a href="{% url 'pizzashop-pizza' %}">Пиццы</a>
+   <div class="list-group">
+        <span class="text-uppercase">Панель</span>
+        <a href="{% url 'pizzashop-pizza' %}"  class="list-group-item">Пиццы</a>
+
+        <span class="text-uppercase">Профиль</span>
+        <a href="{% url 'pizzashop-account' %}"  class="list-group-item">Профиль</a>
+    </div>  
+
+    <br>
+    <div class="text-center">
+        <a href="{% url 'pizzashop-sign-out' %}?next={{request.path}}" class="btn btn-red">Выход</a>
+    </div>
+
+   
 {% endblock %}
