--- a/pizzashopapp/templates/base.html
+++ b/pizzashopapp/templates/base.html
@@ -18,11 +18,10 @@
                 <div class="col-lg-2 col-md-2 col-sm-2 sidebar">
                         {% block sidebar %}{% endblock %}
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-10 content">
+                <div class="offset-lg-2 offset-md-2 offset-sm-2 col-lg-8 col-md-8 col-sm-8 content">
                         {% block page %}{% endblock %}
                 </div>
-            </div>
-           
+            </div>           
     </div>
     
     
