--- a/pizzashopapp/static/css/mystyle.css
+++ b/pizzashopapp/static/css/mystyle.css
@@ -6,6 +6,9 @@ body{
 .bg-ruby{
     background-color: #7B2324;
 }
+.text-white{
+    color: white;
+}
 .btn-red{
     color: white;
     background-color: #e21e35;
@@ -83,4 +86,7 @@ body{
 /*SIDEBAR - CONTENT*/
 .content{
     padding: 0 40px;
+}
+.content .panel{
+    border: none;
 }
