--- a/pizzashopapp/templates/pizzashop/account.html
+++ b/pizzashopapp/templates/pizzashop/account.html
@@ -1,5 +1,24 @@
 {% extends 'pizzashop/base.html' %}
-
+{% load bootstrap3 %}
 {% block page %}  
+
+<div class="offset-lg-4 offset-md-4 offset-sm-4 col-lg-8 col-md-8 col-sm-8">
+    <div class="panel">
+        <div class="panel-heading bg-ruby">
+            <h4 class="panel-title text-center text-white">
+                Профиль
+            </h4>
+        </div>
+        <div class="panel-body">
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% bootstrap_form user_form %}
+                {% bootstrap_form pizzashop_form %}
+                <button type="submit" class="btn btn-red">Обновить</button>
+            </form>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
     
