--- a/pizzashopapp/templates/pizzashop/pizza.html
+++ b/pizzashopapp/templates/pizzashop/pizza.html
@@ -1,4 +1,5 @@
 {% extends 'pizzashop/base.html' %}
 
-{% block page %}    
+{% block page %}   
+<a href="{% url 'pizzashop-add-pizza' %}" class="btn btn-red">Добавить пиццу</a> 
 {% endblock %}
