--- a/pizzashopapp/static/css/mystyle.css
+++ b/pizzashopapp/static/css/mystyle.css
@@ -6,6 +6,9 @@ body{
 .bg-ruby{
     background-color: #7B2324;
 }
+.bg-red{
+    background-color: #e21e25;
+}
 .text-white{
     color: white;
 }
@@ -89,4 +92,16 @@ body{
 }
 .content .panel{
     border: none;
+}
+
+.table > thead > tr > td,
+.table > thead > tr > th{
+    vertical-align: middle;
+}
+.table,
+.table > thead > tr > th{
+    border-color: #e31e25
+}
+.table > tbody > tr:hover{
+    background-color: #ffffff;
 }
