--- a/pizzashopapp/templates/pizzashop/base.html
+++ b/pizzashopapp/templates/pizzashop/base.html
@@ -5,6 +5,10 @@
 {% endblock %}
 
 {% block sidebar %}
+
+{% url 'pizzashop-pizza' as pizzashop_pizza_url %}
+{% url 'pizzashop-account' as pizzashop_account_url %}
+
    <div class="text-center">
        <img class="rounded-circle" src="{{MEDIA_URL}}{{request.user.pizzashop.logo}}" width="70" height="70" alt="">
        <br><br>
@@ -14,10 +18,16 @@
 
    <div class="list-group">
         <span class="text-uppercase">Панель</span>
-        <a href="{% url 'pizzashop-pizza' %}"  class="list-group-item">Пиццы</a>
+        <a 
+        href="{% url 'pizzashop-pizza' %}"  
+        class="list-group-item {% if request.path == pizzashop_pizza_url %}active{%endif%}"
+        >Пиццы</a>
 
         <span class="text-uppercase">Профиль</span>
-        <a href="{% url 'pizzashop-account' %}"  class="list-group-item">Профиль</a>
+        <a 
+        href="{% url 'pizzashop-account' %}"  
+        class="list-group-item {% if request.path == pizzashop_account_url %}active{%endif%}"
+        >Профиль</a>
     </div>  
 
     <br>
